--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Accidental Librarian</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="background_style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323">
 </head>
 <body>
-    <div class="grid-container">
-        <div class="avatar">avatar</div>
-        <div class="key">key</div>
-        <div class="score">score</div>
-        <div class="character-name">name</div>
-        <div class="output">text output</div>
-        <button class="btn input-1">input 1</button>
-        <button class="btn input-2">input 2</button>
-        <button class="btn input-3">input 3</button>
-        <button class="btn input-4">input 4</button>
+    <div class="container">
+        <div id="text">Text</div>
+        <div id="option-buttons" class="btn-grid">
+            <button class="btn">Option 1</button>
+            <button class="btn">Option 2</button>
+            <button class="btn">Option 3</button>
+            <button class="btn">Option 4</button>
+        </div>
     </div>
     <script src="game.js"></script>
 </body>
