--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <div id="text">Text</div>
+        <div id="output" class="output-grid">
+            <div id="avatar">avatar</div>
+            <div id="score">score:</div>
+            <div id="avatar-name">avatar name</div>
+            <div id="text">Text</div>
+        </div>
         <div id="option-buttons" class="btn-grid">
             <button class="btn">Option 1</button>
             <button class="btn">Option 2</button>
